# shypip

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
shypip/: __init__.py  main.py
shypip/tests/: __init__.py  create_sampleproject_whl.sh  test___init__.py  test_integration.py  test_main.py  test_tests__init__.py
shypip/tests/repo1/: README.txt
shypip/tests/repo1/sampleproject/: sampleproject-1.0.0-py3-none-any.whl  sampleproject-1.9.0-py3-none-any.whl
shypip/tests/tests/: __init__.py  test___init__.py
